fix some and change color
fix icon padding
fix checkbox padding
fix local testing

--- a/less/_checkboxes.less
+++ b/less/_checkboxes.less
@@ -1,5 +1,5 @@
 .form-horizontal .checkbox {
-  padding-top: 20px;
+  //padding-top: 20px; // no need to pad
 }
 .checkbox {
   transform: translateZ(0); // Force 3d rendering
