--- a/less/_icons-material-design.less
+++ b/less/_icons-material-design.less
@@ -13,6 +13,8 @@
     speak: none;
     display: inline-block;
     font: normal normal normal 24px/1 'Material-Design-Icons';
+	line-height: 18px;
+	vertical-align: middle;	
     text-rendering: auto;
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
