--- a/less/_variables.less
+++ b/less/_variables.less
@@ -5,11 +5,11 @@
 @material-font-path: "../fonts";
 
 // Bootstrap shades
-@primary: @teal;
-@success: @green;
-@info: @light-blue;
-@warning: @deep-orange;
-@danger: @red;
+@primary: @indigo-A400;
+@success: @green-A400;
+@info: @blue-A400;
+@warning: @deep-orange-A400;
+@danger: @red-A700;
 
 @brand-primary: @primary;
 @brand-success: @success;
