update tabs, pills

--- a/less/_pills.less
+++ b/less/_pills.less
@@ -1,5 +1,5 @@
-.nav-tabs {
-	background-color: transparent;
+.nav-pills {
+    background: transparent;
     > li {
         > a {
             color: darken(@btn-primary, 6%);
