--- a/less/_variables.less
+++ b/less/_variables.less
@@ -5,11 +5,11 @@
 @material-font-path: "../fonts";
 
 // Bootstrap shades
-@primary: @indigo-A400;
-@success: @green-A400;
-@info: @blue-A400;
-@warning: @deep-orange-A400;
-@danger: @red-A700;
+@primary: @blue-A400;
+@success: @light-green-A700;
+@info: @light-blue-A400;
+@warning: @orange-A400;
+@danger: @deep-orange-A400;
 
 @brand-primary: @primary;
 @brand-success: @success;
