--- a/less/material.less
+++ b/less/material.less
@@ -107,6 +107,8 @@ legend {
 
 @import "_tabs.less";
 
+@import "_pills.less";
+
 @import "_popups.less";
 
 @import "_icons.less";
@@ -120,6 +122,8 @@ legend {
 @import "_panels.less";
 
 @import "_dividers.less";
+
+@import "_pagination.less";
 
 // Prevent highlight on mobile
 * {
